[workspace]
members  = ["shared", "engine", "api", "bench"]
resolver = "2"

[workspace.dependencies]
shared             = { path = "shared" }
axum               = { version = "0.8", features = ["ws"] }
tokio              = { version = "1",   features = ["full"] }
serde              = { version = "1",   features = ["derive"] }
serde_json         = "1"
reqwest            = { version = "0.13.3", default-features = false, features = ["json"] }
tokio-tungstenite  = { version = "0.29" }
futures-util       = "0.3"
smallvec           = { version = "1", features = ["union"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Retain debug symbols in release so flamegraph can resolve function names
[profile.flamegraph]
inherits = "release"
debug    = true

[workspace.lints.rust]
missing_debug_implementations = "warn"

[workspace.lints.clippy]
dbg_macro    = "warn"
print_stdout = "warn"
