[package]
name    = "bench"
version = "0.1.0"
edition = "2024"

[dependencies]
shared.workspace            = true
tokio.workspace             = true
reqwest.workspace           = true
tokio-tungstenite.workspace = true
futures-util.workspace      = true
serde_json.workspace        = true

[lints]
workspace = true
