[package]
name    = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
shared.workspace             = true
axum.workspace               = true
tokio.workspace              = true
serde_json.workspace         = true
tracing.workspace            = true
tracing-subscriber.workspace = true

[lints]
workspace = true
